# dream2nix-pyenv

./: .envrc  flake.nix  nix-compile-all  pip-compile-all
code/pypkg1/: pyproject.toml  requirements-dev.txt  requirements.txt
code/pypkg2/: pyproject.toml  requirements-dev.txt  requirements.txt
code/pypkg2/src/pypkg2/: __init__.py
nix/: common.nix  nix-lock-all  pip-compile-all  pypkg1-x86_64-linux-lock.json  pypkg1.nix  pypkg2-x86_64-linux-lock.json  pypkg2.nix
