[build-system]
requires = ["setuptools>=68", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"


[project]
name = "pypkg1"
version = "1.0.0"
dependencies = [
  "cryptography",
  "gunicorn"
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pip-tools",
  "python-lsp-server",
  "ruff",
  "ruff-lsp",
  "setuptools-scm",
  "sphinx",
]


[tool.setuptools.packages.find]
where = ["src"]
