[build-system]
requires = ["setuptools>=68", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"


[project]
name = "pypkg2"
version = "1.0.0"
dependencies = [
  "asammdf"
]

[project.optional-dependencies]
dev = [
  "mypy",
  "python-lsp-server",
  "ruff",
  "ruff-lsp",
]


[tool.setuptools.packages.find]
where = ["src"]
